@@ -1,3 +1,9 @@
+2006-11-20  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclBasic.c (Tcl_CreateInterp, TclHideUnsafeCommands): 
+	* library/init.tcl: Refactored the [chan] command's guts so that it
+	does not use aliases to global commands, making the code more robust.
+
 2006-11-17  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclExecute.c (INST_EXPON):	Corrected crash on
